--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,14 @@ body {
 .container {
 	overflow: hidden;
 	padding: 0 10px;
-	margin: 10px 0 ;
+	margin: 10px 25% ;
+
+}
+.panel {
+	overflow: hidden;
+	text-align: center;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 a:visited {
 	color: #333333;
@@ -145,6 +152,7 @@ footer {
 	font-size: 1.5em;
 	margin: 0 auto;
 }
+
 .social-icons {
 	text-align: center;
 }
