--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ body {
 .container {
 	overflow: hidden;
 	padding: 0 10px;
-	margin: 0 25% ;
+	margin: 0 auto;
 
 
 }
@@ -124,7 +124,7 @@ nav i {
 	color: white;
 }
 .buscador-dropdown {
-	display: none;
+	display:none;
 }
 .buscador-dropdown li {
 	border-top: 1px solid #FFCC66;
