--- a/css/styles.css
+++ b/css/styles.css
@@ -46,14 +46,15 @@ table {
 body {
 	background-color: white;
 	font-family: 'Roboto', sans-serif;
-	max-width: 2180px;
+	max-width: 1180px;
 	margin: 0 auto;
 	padding: 5px 10px;
 }
 .container {
 	overflow: hidden;
 	padding: 0 10px;
-	margin: 0 auto;
+	margin: 10px auto;
+	position:relative;
 
 
 }
@@ -76,7 +77,19 @@ header {
 	overflow: hidden;
 	font-size: 1.5em;
 }
+h1 {
+	display: inline-block;
+}
+nav {
+	display: inline-block;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+}
+
+
 nav i {
+
 	float: right;
 	color: #003366;
 	margin: 16px 16px 0 0;
@@ -90,7 +103,31 @@ nav i {
 .encabezado {
 	width: 100%;
 	text-align: center;
+	margin-top: 10px;
+	overflow: hidden;
 }
+.overlay {
+	position: absolute; /* Sit on top of the page content */
+	top:0;
+	left: 0;
+	width: 100%; /* Full width (cover the whole page) */
+	height: 100%;
+	text-align: center;
+	z-index: 2;
+}
+.overlay h2 {
+	color: white;
+	font-weight: 600;
+	position: relative;
+  top: 20px;
+
+}
+
+.overlay div button {
+	position: relative;
+	bottom:1px;
+}
+
 .logo {
 	margin-bottom: 5px;
 	width: 197px;
@@ -134,7 +171,7 @@ h2 {
 	color: #333333;
 	font-weight: 600;
 	margin-bottom: 10px;
-	text-transform: uppercase;
+
 }
 .deporte {
 	width: 100%;
