--- a/css/styles.css
+++ b/css/styles.css
@@ -62,14 +62,14 @@ body {
 	border: 1px solid blue;
 }
 */
-/*
+
 .panel {
 	overflow: hidden;
 	text-align: center;
-	margin-left: 10%;
-	margin-right: 10%;
+	margin: 0 25%;
+
 }
-*/
+
 form p {
 	margin-bottom: 10px;
 }
@@ -114,6 +114,7 @@ h1 {
 }
 .img-home {
 	width: 100%;
+	height: 240px;
 	margin-bottom: 20px;
 }
 .overlay {
@@ -144,12 +145,9 @@ h1 {
 	text-align: center;
 	font-weight: 500;
 	font-size: 0.9em;
+	border-radius: 2px;
 }
-/*
-.wrapper {
-	overflow: hidden;
-}
-*/
+
 
 /* BUSCADOR */
 .buscador {
@@ -159,6 +157,7 @@ h1 {
 	font-size: 1em;
 	text-transform: uppercase;
 	text-align: center;
+	border-radius: 2px;
 }
 .select {
 	border: 0;
@@ -166,6 +165,8 @@ h1 {
 	border-right: 1px solid #003366;
 	font-size: 0.7em;
 	color: #333333;
+	margin-right: 10px;
+	margin-bottom:10px;
 }
 .btn-submit {
 	font-size: 0.8em;
@@ -173,6 +174,7 @@ h1 {
 	background-color: #003366;
 	text-transform: uppercase;
 	padding: 8px;
+	border-radius:2px;
 }
 .buscador-dropdown li {
 	border-top: 1px solid #003366;
