--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,8 @@ body {
 .panel {
 	overflow: hidden;
 	text-align: center;
-	margin: 0 25%;
+	margin: 0 auto;
+	max-width: 480px;
 
 }
 
@@ -122,6 +123,7 @@ h1 {
 	top: 0;
 	left: 0;
 	width: 100%;
+	height: 240px;
 	overflow: hidden;
 	text-align: center;
 	}
@@ -147,10 +149,10 @@ h1 {
 	font-size: 0.9em;
 	border-radius: 2px;
 }
-.btns a{
+.btns {
 	overflow: hidden;
 	position: relative;
-	top:10px;
+	top:40px;
 }
 
 
