--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body {
 	background-color: white;
 	font-family: 'Roboto', sans-serif;
 	max-width: 1180px;
-	margin: 0 auto;
+	margin: 0 auto 20px auto;
 }
 .container {
   padding-right: 15px;
@@ -246,7 +246,7 @@ hr {
 }
 .ver_todos {
 	float: right;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 	font-size: 0.8em;
 	vertical-align: baseline;
 	line-height: 1.5em;
