--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ table {
 body {
 	background-color: white;
 	font-family: 'Roboto', sans-serif;
-	margin: 0 auto 20px auto;
+	padding: 10px 0 10px 0
 }
 .container {
  	padding-right: 15px;
@@ -77,8 +77,7 @@ header {
 	display: flex;
 	text-align: center;
 	overflow: hidden;
-	margin-bottom: 15px;
-	margin-top: 10px;
+	margin: 10px 0;
 }
 .logo {
 	width: 120px;
@@ -86,7 +85,6 @@ header {
 h1 {
 	width: 100%;
 	flex: 1;
-	margin-top: 10px;
 	position: absolute;
 }
 h3 {
@@ -127,11 +125,11 @@ hr {
 /* MENU  ------------------------------- */
 .burger-icon {
 	float: right;
-	margin: 10px 5px 0 0;
 }
 .menu {
 	width: 100%;
 	margin-right: 15px;
+	align-self: center;
 	float: right;
 }
 .menu ul {
@@ -140,13 +138,11 @@ hr {
 	justify-content: flex-end;
 	align-items: flex-start;
 	overflow: hidden;
-	height: 40px;
 	margin: 0;
 	padding: 0;
 }
 .nav-items {
-	margin: 10px 10px 0 5px;
-	width: auto;
+	margin-right: 10px;
 }
 .nav-items:last-child {
 	margin-right: 10px;
@@ -217,7 +213,7 @@ hr {
 	background-image: url('../images/mega.jpg');
 	background-size: cover;
 	color: #ffffff;
-	height: 300px;
+	height: 60vh;
 	width: 100%;
 	text-shadow: 0.25px 0.25px 0.25px #000000;
 	margin-bottom: 20px;
@@ -477,6 +473,13 @@ input[type="checkbox"] {
 		flex-wrap: wrap;
 		visibility: visible;
 	}
+	.mega {
+		height: 70vh;
+	}
+	.mega h2 {
+		font-size: 2.5em;
+		max-width: 400px;
+	}
 	.evento {
 	display: table-cell;
 	padding-right: 10px;
@@ -484,6 +487,11 @@ input[type="checkbox"] {
 	}
 	.evento:last-child {
 	padding-right: 0;
+	width: 19%;
+	}
+
+	.evento-deporte {
+		font-size: 1em;
 	}
 
 	/*.container {
