--- a/css/styles.css
+++ b/css/styles.css
@@ -260,19 +260,22 @@ hr {
 	width: 100%;
 	overflow: hidden;
 	text-align: left;
+	position: relative;
 }
 .flechas {
 	position: absolute;
-	z-index: 1;
+	top: 35px;
+	z-index: 2;
 	color: white;
-	display: none;
+	visibility: hidden;
+	width: 100%;
+	padding: 0 10px;
+	font-size: 2em;
 }
 .flecha_izq {
-	color: #003366;
 	float: left;
 }
 .flecha_der {
-	color: #003366;
 	float: right;
 }
 .ver_todos {
@@ -306,7 +309,7 @@ hr {
 	position: absolute;
 	left: 20px;
 	top: 20px;
-	z-index: 2;
+	z-index: 1;
 	color: white;
 	text-shadow: 1px 1px 2px #303030;
 }
@@ -480,6 +483,20 @@ input[type="checkbox"] {
 		font-size: 2.5em;
 		max-width: 400px;
 	}
+	.buscador select {
+		font-size: initial;
+		width: 25%;
+	}
+
+
+	/*.container {
+    width: 750px;
+  }*/
+}
+@media (min-width: 860px) {
+  .container {
+    width: 970px;
+  }
 	.evento {
 	display: table-cell;
 	padding-right: 10px;
@@ -489,19 +506,12 @@ input[type="checkbox"] {
 	padding-right: 0;
 	width: 19%;
 	}
-
 	.evento-deporte {
 		font-size: 1em;
 	}
-
-	/*.container {
-    width: 750px;
-  }*/
-}
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
+	.flechas {
+		visibility: visible;
+	}
 }
 @media (min-width: 1200px) {
   .container {
